--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
 		"postcss-import": "^14.0.0",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
+		"react-hook-form": "^6.15.4",
 		"redux": "^4.0.5",
+		"tailwindcss": "^2.0.3",
+		"web-vitals": "^1.1.0",
 		"webpack-eslint-plugin": "^1.2.0"
 	},
 	"devDependencies": {
@@ -29,12 +32,14 @@
 		"@types/fork-ts-checker-webpack-plugin": "^0.4.5",
 		"@types/react": "^17.0.2",
 		"@types/react-dom": "^17.0.1",
+		"@types/tailwindcss": "^2.0.0",
 		"@types/webpack": "^4.41.26",
 		"@types/webpack-dev-server": "^3.11.1",
 		"@typescript-eslint/eslint-plugin": "^4.16.1",
 		"@typescript-eslint/parser": "^4.16.1",
-		"autoprefixer": "^10.2.4",
+		"autoprefixer": "^10.2.5",
 		"babel-loader": "^8.2.2",
+		"babel-plugin-syntax-dynamic-import": "^6.18.0",
 		"clean-webpack-plugin": "^3.0.0",
 		"css-loader": "^5.1.1",
 		"css-minimizer-webpack-plugin": "^1.2.0",
@@ -47,6 +52,7 @@
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"eslint-plugin-unicorn": "^28.0.2",
 		"eslint-webpack-plugin": "^2.5.2",
+		"firebase": "8.2.10",
 		"fork-ts-checker-webpack-plugin": "^6.1.1",
 		"html-webpack-plugin": "^5.2.0",
 		"image-minimizer-webpack-plugin": "^2.2.0",
@@ -55,14 +61,13 @@
 		"imagemin-optipng": "^8.0.0",
 		"imagemin-svgo": "^9.0.0",
 		"mini-css-extract-plugin": "^1.3.9",
-		"postcss": "^8.2.7",
+		"postcss": "^8.2.8",
 		"postcss-loader": "^5.0.0",
 		"postcss-nested": "^5.0.4",
 		"prettier": "2.2.1",
 		"sass": "^1.32.8",
 		"sass-loader": "^11.0.1",
 		"style-loader": "^2.0.0",
-		"tailwindcss": "^2.0.3",
 		"terser-webpack-plugin": "^5.1.1",
 		"ts-node": "^9.1.1",
 		"typescript": "^4.2.2",
